fixed the gap for the footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 60px;
+    gap: 250px;
 }
 
 article {
